# aubo_boot

./: .gitignore  README.md  clean_ros_logs.sh  pyrightconfig.json  remove_debug_logs.py  remove_js_debug_logs.py  remove_python_debug_logs.py  start_IVG.sh  start_IVG_after_migration.sh  start_IVG_before_migration.sh  start_IVG_ros2.sh  start_aubo_moveit_bridge_ros2.sh  start_hand_eye_calibration copy.sh  start_hand_eye_calibration.sh  start_hand_eye_calibration_no_workspace_limit.sh
aubo_robot/aubo_robot/demo_driver/: CMakeLists.txt
aubo_robot/aubo_robot/demo_driver/include/demo_driver/: move_to_pose_server.h  (+2 more)
aubo_robot/aubo_robot/demo_driver/launch/: set_robot_enable_server.launch
aubo_robot/aubo_robot/demo_driver/src/: execute_trajectory_main.cpp  execute_trajectory_server.cpp  get_current_state_main.cpp  get_current_state_server.cpp  main.cpp  move_to_pose_main.cpp  move_to_pose_server.cpp  plan_trajectory_main.cpp  plan_trajectory_server.cpp  read_robot_io_main.cpp  read_robot_io_server.cpp  robot_io_status_main.cpp  robot_io_status_publisher.cpp  robot_status_publisher.cpp  set_robot_enable_main.cpp  set_robot_enable_server.cpp  set_robot_io_main.cpp  set_robot_io_server.cpp  set_speed_factor_main.cpp  set_speed_factor_server.cpp
aubo_ros2_ws/src/aubo_ros2_driver/aubo_demo/: CMakeLists.txt  README.md  ROS1_ROS2_COMPARISON.md  package.xml  test_services_based_on_demo.py
aubo_ros2_ws/src/aubo_ros2_driver/aubo_description/: CMakeLists.txt  aubo_ros2.xacro  package.xml
aubo_ros2_ws/src/aubo_ros2_driver/aubo_description_ros2/: CMakeLists.txt  package.xml
aubo_ros2_ws/src/aubo_ros2_driver/aubo_driver_ros2/: CMakeLists.txt  README.md  package.xml
aubo_ros2_ws/src/aubo_ros2_driver/aubo_msgs/: CMakeLists.txt  mapping_rules.yaml  package.xml
aubo_ros2_ws/src/aubo_ros2_driver/aubo_robot_simulator_ros2/: README.md  package.xml  setup.cfg  setup.py  修改总结.md
aubo_ros2_ws/src/aubo_ros2_driver/demo_driver/: CMakeLists.txt  README.md  package.xml  test_services.py
aubo_ros2_ws/src/aubo_ros2_driver/feedback_bridge/: CMakeLists.txt  package.xml
aubo_ros2_ws/src/aubo_ros2_driver/ros2_moveit_config/: CMakeLists.txt  QUICK_START.md  README.md  package.xml
aubo_ros2_ws/src/coordinate_transforms/: CMakeLists.txt  README.md  package.xml
aubo_ros2_ws/src/coordinate_transforms/config/: camera_example.yaml
aubo_ros2_ws/src/coordinate_transforms/doc/: COORDINATE_SYSTEMS_AND_TRANSFORMS.md
aubo_ros2_ws/src/coordinate_transforms/launch/: coord_tf_demo.launch.py  coord_tf_visualization.launch.py
aubo_ros2_ws/src/depth_z_reader/: CMakeLists.txt  IMAGE_TRANSPORT_EXPLANATION.md  README.md  package.xml
aubo_ros2_ws/src/depth_z_reader/launch/: depth_z_reader.launch.py
aubo_ros2_ws/src/depth_z_reader/src/: depth_z_reader_node.cpp
aubo_ros2_ws/src/hand_eye_calibration/: CHANGELOG.md  FINAL_DEPLOY.sh  OpenCV模式自动手眼标定执行流程.md  README.md  SUCCESS_FIX_RECORD.md  SUMMARY.md  analyze_calibration_errors.py  check_error_calculation.py  check_opencv_implementation.py  compare_with_reference.py  deploy_new_features.sh  fix_and_deploy.sh  package.xml  setup.cfg  setup.py  simulate_custom_calibration.py  simulate_opencv_calibration.py  start_hand_eye_calibration.sh  start_web_ui.sh  test_data_consistency.html  test_fixes.html  test_magnifier_fix.html  test_pose_label_update.html  test_robot_motion_control.html  test_robot_pose_feature.html  test_simple_calibration.py  test_single_point_modal.html  test_ui_optimization.html  test_unit_fix.html  verify_calculation.py  verify_error_calculation.py  verify_final_formula.py  verify_hand_eye_math.py  verify_opencv_with_real_data.py  verify_translation_rank.py  ╗∙▒╛╩╣╙├╩╛└².md  三项计算实时记录.md  快速启动.md  数据流程验证报告.md  相机内参ROS2话题集成说明.md  (+2 more)
aubo_ros2_ws/src/hand_eye_calibration/.marscode/: deviceInfo.json
aubo_ros2_ws/src/hand_eye_calibration/config/: POSES_FILE_MANAGEMENT.md  README.md  cameraParams.xml  hand_eye_calibration.xml
aubo_ros2_ws/src/hand_eye_calibration/hand_eye_calibration/: __init__.py  camera_calibration_utils.py  custom_hand_eye_calibration.py  hand_eye_calibration_node.py  hand_eye_calibration_tf_publisher.py  image_data_converter_node.py  opencv_hand_eye_calibration.py
aubo_ros2_ws/src/hand_eye_calibration/hand_eye_calibration_tool/: QUICK_START.md  README.md
aubo_ros2_ws/src/hand_eye_calibration/launch/: hand_eye_calibration_launch.py  hand_eye_calibration_tf.launch.py
aubo_ros2_ws/src/hand_eye_calibration/scripts/: hand_eye_calibration_node.py  image_data_converter_node.py  test_calibration_with_chessboard.py
aubo_ros2_ws/src/hand_eye_calibration/simulation_results/: custom_simulation_results_20260110_192435.json  custom_simulation_results_20260110_192601.json  simulation_results_20260110_180147.json  simulation_results_20260110_180504.json  simulation_results_20260110_180642.json  simulation_results_20260110_180902.json  simulation_results_20260110_181217.json  simulation_results_20260110_181359.json  simulation_results_20260110_181607.json  simulation_results_20260110_183147.json  simulation_results_20260110_183216.json  simulation_results_20260110_183224.json  simulation_results_20260110_184110.json  simulation_results_20260110_192121.json  simulation_results_20260110_202645.json  simulation_results_20260112_090424.json  simulation_results_20260112_093035.json  simulation_results_20260112_093207.json  simulation_results_20260112_093622.json  simulation_results_20260112_094216.json  simulation_results_20260112_104149.json
ros2_ws/src/demo_interface/: CMakeLists.txt
ros2_ws/src/demo_interface/srv/: ExecuteTrajectory.srv
visual_pose_estimation/src/visual_pose_estimation/: CMakeLists.txt  README.md  package.xml
visual_pose_estimation/src/visual_pose_estimation/configs/: default.yaml
visual_pose_estimation/src/visual_pose_estimation/docs/: 基本使用示例.md
visual_pose_estimation/src/visual_pose_estimation/launch/: visual_pose_estimation.launch.py
visual_pose_estimation/src/visual_pose_estimation/src/: config_reader.cpp  feature_extractor.cpp  main.cpp  preprocessor.cpp  ros2_communication.cpp  template_standardizer.cpp
(+13326 files in other folders)
