<?xml version="1.0"?>
<package format="3">
  <name>visual_pose_estimation</name>
  <version>1.0.0</version>
  <description>基于单目相机模板匹配的工件三维抓取姿态估计算法 - C++ ROS2实现</description>
  
  <maintainer email="developer@example.com">Developer</maintainer>
  <license>MIT</license>
  
  <url type="website">https://github.com/example/visual_pose_estimation</url>
  <url type="bugtracker">https://github.com/example/visual_pose_estimation/issues</url>
  <url type="repository">https://github.com/example/visual_pose_estimation</url>
  
  <author email="developer@example.com">Developer</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>interface</depend>
  <depend>ament_index_cpp</depend>
  
  <build_depend>OpenCV</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>jsoncpp</build_depend>
  
  <exec_depend>OpenCV</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>jsoncpp</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

