<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aubo_description</name>
  <version>1.3.3</version>
  <description>The aubo_description package containing robot description files (URDF/XACRO) and meshes</description>
  <maintainer email="liug@our-robotics.com">Allen Liu</maintainer>
  <license>BSD</license>
  <author email="liug@our-robotics.com">Allen Liu</author>
  <url type="website">http://wiki.ros.org/aubo_description</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
