<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aubo_robot_simulator_ros2</name>
  <version>1.0.0</version>
  <description>ROS2 trajectory interpolator: subscribes joint_path_command, publishes moveItController_cmd for aubo_driver (ROS1) via bridge</description>
  <maintainer email="834031119@qq.com">Shaosong</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
