<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_moveit_config</name>
  <version>1.0.0</version>
  <description>
    MoveIt2 configuration for Aubo E5 robot with ROS 1 bridge support.
    This package allows controlling ROS 1 robot controllers through ros1_bridge
    using MoveIt2 and RViz2.
  </description>
  <maintainer email="user@example.com">User</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>robot_state_publisher</depend>
  <depend>tf2_ros</depend>
  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>ros1_bridge</depend>
  <depend>demo_interface</depend>
  <depend>demo_driver</depend>
  <depend>aubo_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

